--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.13.5",
+    "bootstrap": "^5.3.8",
+    "lodash": "^4.17.23",
     "react": "^19.2.4",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.4",
+    "react-icons": "^5.5.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
+    "sass": "^1.97.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
